Simplify application: Remove image generation features
- Removed OpenAI DALL-E integration and dependencies
- Removed image generation endpoints (/generate-image, /generate-image-sd)
- Simplified web UI to chat-only interface
- Cleaned up AiService to focus on chat functionality
- Updated README to reflect simplified feature set
- Removed image generation setup scripts
- Application now focuses on clean, simple AI chat experience